RESOLVED FIXED 259274
[macOS] Block runningboard access in the Network Process sandbox again
https://bugs.webkit.org/show_bug.cgi?id=259274
Summary [macOS] Block runningboard access in the Network Process sandbox again
Chris Dumez
Reported 2023-07-17 09:03:16 PDT
Block runningboard access in the Network Process sandbox again on macOS and address Bug 259229 by always holding a background assertion on the network process (so that it never suspends).
Attachments
Chris Dumez
Comment 1 2023-07-17 09:07:19 PDT
EWS
Comment 2 2023-07-17 10:44:43 PDT
Committed 266101@main (2d0174d8fad3): <https://commits.webkit.org/266101@main> Reviewed commits have been landed. Closing PR #15883 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-07-17 10:45:23 PDT
Note You need to log in before you can comment on or make changes to this bug.