Cherry-pick 2d0174d8fad3. rdar://problem/112413309

[macOS] Block runningboard access in the Network Process sandbox again
    https://bugs.webkit.org/show_bug.cgi?id=259274

    Reviewed by Per Arne Vollan.

    Block runningboard access in the Network Process sandbox again on macOS and
    address Bug 259229 by always holding a background assertion on the network
    process (so that it never suspends).

    * Source/WebKit/NetworkProcess/NetworkProcess.cpp:
    (WebKit::NetworkProcess::setIsHoldingLockedFiles):
    * Source/WebKit/NetworkProcess/mac/com.apple.WebKit.NetworkProcess.sb.in:
    * Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:
    (WebKit::NetworkProcessProxy::NetworkProcessProxy):
    * Source/WebKit/UIProcess/Network/NetworkProcessProxy.h:

    Canonical link: https://commits.webkit.org/266101@main